fix(styles): Fix z-index of dialogs

--- a/src/styles/_evergreen.scss
+++ b/src/styles/_evergreen.scss
@@ -23,8 +23,13 @@
   }
 }
 
-// NOTE: Resort to global style + !important b/c evergreen-ui's <SelectMenu/>
-// doesn't expose any props for adding classes to it's dialog component 🤢
-div[evergreen-portal-container] div {
-  z-index: $z-index__dialog !important;
+// NOTE: Resort to global style + !important b/c evergreen-ui doesn't expose any
+// props for overwriting z-indexes of its dialog-based components 🤢
+div[evergreen-portal-container] {
+  // Dialog
+  div[data-state="entered"],
+  // SelectMenu
+  div[role="dialog"] {
+    z-index: $z-index__dialog !important;
+  }
 }
